[gd_scene load_steps=13 format=3 uid="uid://6bc51myx438g"]

[ext_resource type="Texture2D" uid="uid://driwh826qtja5" path="res://assets/images/pause/assetChecked.png" id="1_f8gb6"]
[ext_resource type="Script" path="res://scenes/pause/AssetSelection.gd" id="1_pt5a7"]
[ext_resource type="Texture2D" uid="uid://cw8m4pcblfxwo" path="res://assets/images/pause/assetCheck.png" id="2_u3ybs"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lg4w5"]
bg_color = Color(0.160784, 0.160784, 0.160784, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
shadow_color = Color(1, 1, 1, 0.6)
shadow_size = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_207ud"]
bg_color = Color(0.133333, 0.133333, 0.133333, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(1, 1, 1, 1)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
anti_aliasing_size = 3.526

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8g5ga"]
bg_color = Color(0.266667, 0.266667, 0.266667, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(1, 1, 1, 1)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
anti_aliasing_size = 5.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5rh6b"]
bg_color = Color(0.0588235, 0.0588235, 0.0588235, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.627451, 0.627451, 0.627451, 1)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
anti_aliasing_size = 2.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bjcvl"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6mlxv"]
bg_color = Color(0.266667, 0.266667, 0.266667, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(1, 1, 1, 1)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
anti_aliasing_size = 5.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2uyb1"]
bg_color = Color(0.0588235, 0.0588235, 0.0588235, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.627451, 0.627451, 0.627451, 1)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
anti_aliasing_size = 2.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_favp7"]
bg_color = Color(0.266667, 0.266667, 0.266667, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(1, 1, 1, 1)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
anti_aliasing_size = 5.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_sy8ot"]
bg_color = Color(0.0588235, 0.0588235, 0.0588235, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.627451, 0.627451, 0.627451, 1)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
anti_aliasing_size = 2.0

[node name="AssetSelection" type="ColorRect"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 1
color = Color(0, 0, 0, 0.866667)
script = ExtResource("1_pt5a7")

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_left = 75.0
offset_top = 30.0
offset_right = 650.0
offset_bottom = 690.0
focus_mode = 1
theme_override_styles/panel = SubResource("StyleBoxFlat_lg4w5")

[node name="Container" type="ScrollContainer" parent="Panel"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 6.0
offset_right = -10.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/Container"]
layout_mode = 2
size_flags_horizontal = 3

[node name="TempleteCheck" type="CheckBox" parent="Panel/Container/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
theme_override_icons/checked = ExtResource("1_f8gb6")
theme_override_icons/unchecked = ExtResource("2_u3ybs")
text = "Templete"

[node name="Line2D" type="Line2D" parent="."]
position = Vector2(960, 210)
points = PackedVector2Array(-115, -85, -15, -85, -15, -55, 135, -55, 135, 85, -135, 85, -135, -55, -115, -55, -115, -85)
default_color = Color(0.862745, 0.862745, 0.862745, 1)
joint_mode = 2
end_cap_mode = 2

[node name="Label" type="Label" parent="."]
offset_left = 884.0
offset_top = 185.0
offset_right = 1032.0
offset_bottom = 255.0
theme_override_font_sizes/font_size = 48
text = "Assets
"

[node name="Confirm" type="Button" parent="."]
layout_mode = 0
offset_left = 860.0
offset_top = 430.0
offset_right = 1060.0
offset_bottom = 480.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 26
theme_override_styles/normal = SubResource("StyleBoxFlat_207ud")
theme_override_styles/hover = SubResource("StyleBoxFlat_8g5ga")
theme_override_styles/pressed = SubResource("StyleBoxFlat_5rh6b")
theme_override_styles/focus = SubResource("StyleBoxFlat_bjcvl")
text = "Confirm"

[node name="Cancel" type="Button" parent="."]
layout_mode = 0
offset_left = 860.0
offset_top = 490.0
offset_right = 1060.0
offset_bottom = 540.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 26
theme_override_styles/normal = SubResource("StyleBoxFlat_207ud")
theme_override_styles/hover = SubResource("StyleBoxFlat_6mlxv")
theme_override_styles/pressed = SubResource("StyleBoxFlat_2uyb1")
theme_override_styles/focus = SubResource("StyleBoxFlat_bjcvl")
text = "Cancel
"

[node name="Folder" type="Button" parent="."]
layout_mode = 0
offset_left = 860.0
offset_top = 550.0
offset_right = 1060.0
offset_bottom = 600.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 26
theme_override_styles/normal = SubResource("StyleBoxFlat_207ud")
theme_override_styles/hover = SubResource("StyleBoxFlat_favp7")
theme_override_styles/pressed = SubResource("StyleBoxFlat_sy8ot")
theme_override_styles/focus = SubResource("StyleBoxFlat_bjcvl")
text = "Open Folder
"

[connection signal="pressed" from="Confirm" to="." method="_on_confirm_pressed"]
[connection signal="pressed" from="Cancel" to="." method="queue_free"]
[connection signal="pressed" from="Folder" to="." method="_on_folder_pressed"]
